--- a/wiki-page.html
+++ b/wiki-page.html
@@ -10,7 +10,7 @@
   <h1>The Brown Bear </h1>
   <h2> lab2 </h2>
   <p>The brown bear (Ursus arctos) is a native to parts of northern eurasia and north america. its conservation status is currently "least concern" there are many subspecies within the brown bear species, including the atlas bear and the himalayan brown bear.</p>
-  
+  <p> the bear is an animal</p>
   <a href="https://en.wikipedia.org/wiki/Brown_bear">learn more </a> <br/><br/>
   Here are some bear species: <ul><li>Arctos</li><li>Collarus</li><li>Horribilis</li><li>Nelsoni(extinct)</li></ul>
   The following countries have the largest population of brown bears: <ol><li>Russia</li><li>United States</li><li>Canada</li></ol>
