--- a/wiki-page.html
+++ b/wiki-page.html
@@ -14,7 +14,7 @@
   <a href="https://en.wikipedia.org/wiki/Brown_bear">learn more </a> <br/><br/>
   Here are some bear species: <ul><li>Arctos</li><li>Collarus</li><li>Horribilis</li><li>Nelsoni(extinct)</li></ul>
   The following countries have the largest population of brown bears: <ol><li>Russia</li><li>United States</li><li>Canada</li></ol>
- 
+  bear colors: <ul><li>brown</li><li>white</li></ul>
 
   <img src="bear.jpg" alt="Brown bear">
 </body>
