--- a/wiki-page.html
+++ b/wiki-page.html
@@ -15,7 +15,7 @@
   Here are some bear species: <ul><li>Arctos</li><li>Collarus</li><li>Horribilis</li><li>Nelsoni(extinct)</li></ul>
   The following countries have the largest population of brown bears: <ol><li>Russia</li><li>United States</li><li>Canada</li></ol>
   bear colors: <ul><li>brown</li><li>white</li></ul>
-
+  additional countries: <ol><li>austiralia</li><li>iceland</li></ol>
   <img src="bear.jpg" alt="Brown bear">
 </body>
 </html>
